[package]
name = "oreally"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
regex = "1.7.1"
url = "2.3.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
dirs = "4.0.0"
prettytable = "0.10.0"


[dev-dependencies]
uuid = { version = "1.3.0", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
