[package]
name = "oreally"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
regex = "1.7.1"
url = "2.3.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
dirs = "4.0.0"
prettytable = "0.10.0"
pueue = "3.1.2"
pueue-lib = "0.21.3"
anyhow = "1.0.70"
log = "0.4.17"
simplelog = "0.12.1"
tokio = { version = "1.26", features = ["rt-multi-thread", "time", "io-std"] }


[dev-dependencies]
uuid = { version = "1.3.0", features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

# [lib]
# name = "mylib"
# path = "src/mylib.rs"

# [[bin]]
# name = "mybin"
# path = "src/bin.rs"
